load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")

exports_files([
  "cc-m1.patch",
])

py3_image(
    name = "test_image",
    srcs = ["test.py"],
    main = "test.py",
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

py_binary(
  name = "test",
  srcs = ["test.py"],
  main = "test.py",
)
